<resources>
    <string name="app_name">mapstest</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tempmaps">Map</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="google_maps_key">API_KEY_HERE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_farmer">FarmerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_warehouse_list">Warehouse List</string>
    <string name="menu_farmer_list">Farmer List</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_qr_code">QR Code Scan</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_warehouse">WarehouseActivity</string>
    <string name="title_activity_retailers">RetailersActivity</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

    <string name="profile_name">Techie Tribe</string>
    <string name="profile_action_settings">Settings</string>
    <string name="content_profile_primary_text">primary</string>
    <string name="content_profile_alternate_text">alternative</string>
    <string name="content_profile_email_text">farmer@farm.com</string>
    <string name="content_profile_emailType_text">Work</string>
    <string name="content_profile_primaryAddress_text">farm address</string>
    <string name="content_profile_secondaryAddress_text">warehouse address</string>
    <string name="content_profile_addressTypePrimary_text">Home</string>
    <string name="content_profile_addressTypeSecondary_text">Warehouse</string>
    <string name="content_profile_addContact_text">Add Contact </string>
    <string name="title_activity_buy_splash">Sahayata 2.0</string>

    <string name="activity_buy_splash_slogan_text">Buy More Save More</string>
    <string name="buy_app_name">Sahayata 2.0</string>
    <string name="title_activity_grid_item">GridItem</string>
    <string name="title_activity_bsp__grid">Bsp_Grid</string>

</resources>
