<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.RegisterActivity">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/rlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/sign_up_gap"
                android:paddingRight="@dimen/sign_up_gap"
                >

                <TextView
                    android:id="@+id/usertype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/my_toolbar"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:text="User Type:"
                    tools:ignore="NotSibling" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:layout_below="@id/usertype"
                    ></Spinner>

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:layout_below="@id/spinner"
                    android:hint="First Name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/firstname"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:hint="Last Name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/mobno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lastname"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:hint="Mobile No"
                    android:inputType="phone"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/email"
                    android:layout_below="@id/mobno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:autofillHints="password"
                    android:layout_below="@id/email"
                    android:layout_marginTop="@dimen/sign_up_gap"
                    android:layout_marginBottom="@dimen/sign_up_gap"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textStyle="italic"
                 />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linear1"
                    android:orientation="vertical"
                    android:layout_below="@id/password">

                    <LinearLayout
                        android:id="@+id/Locationview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Set Location"/>
                        <Button
                            android:id="@+id/locbutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pick" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lat:"/>
                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/sign_up_gap"
                            android:text="0.0"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Long:"/>
                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.0"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/dummytext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sign_up_gap"
                        android:layout_marginBottom="@dimen/sign_up_gap"
                        android:text="hello"
                        android:visibility="gone"
                        android:textStyle="italic"
                        />
                    <Button
                        android:id="@+id/dummybutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sign_up_gap"
                        android:layout_marginBottom="@dimen/sign_up_gap"
                        android:text="Select"
                        android:visibility="gone"/>
                    <EditText
                        android:id="@+id/dummyedit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sign_up_gap"
                        android:layout_marginBottom="@dimen/sign_up_gap"
                        android:hint=""
                        android:visibility="gone"
                        android:textStyle="italic"
                        />


                </LinearLayout>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sign_up_gap"
                    android:layout_marginRight="@dimen/sign_up_gap"
                    android:layout_below="@id/linear1"
                    android:enabled="true"
                    android:text="Register" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:layout_marginTop="-16dp"
        android:layout_marginRight="-16dp"
        android:layout_marginLeft="-16dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/title_activity_register"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold|italic" />
    </Toolbar>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

</RelativeLayout>
